Closed Bug 1013425 Opened 11 years ago Closed 11 years ago

[B2G][Flame][Camera] Preview stuck when taking picture in HDR mode

Categories

(Firefox OS Graveyard :: Gaia::Camera, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:1.4+, firefox30 wontfix, firefox31 wontfix, firefox32 fixed, b2g-v1.4 fixed, b2g-v2.0 fixed)

RESOLVED FIXED
2.0 S2 (23may)
blocking-b2g 1.4+
Tracking Status
firefox30 --- wontfix
firefox31 --- wontfix
firefox32 --- fixed
b2g-v1.4 --- fixed
b2g-v2.0 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

Details

Attachments

(2 files, 1 obsolete file)

From bug 1007973: 3) Unresponsive / freezing camera when switching HDR ON and taking a picture This issue involves starting the camera app with the HDR set to off, setting it to ON and then taking a picture. Like the 1st issue the ring will appear, turn green and shrink down, then the screen will quickly flash, then viewfinder will "freeze" indefinately on the still image of the picture just taken. After 4 or 5 seconds the preview thumbnail will appear to the left of the shutter button. You will still be able to access the settings, switch the camera to video, or access the preview thumbnail. Accessing the preview thumbnail will take you to the picture just taken but then returning to the camera via the back arrow in the upper left corner will return you to a black screen with all the camera icons and buttons. If instead you minimize the app and re-enter it or switch to video mode and back everything will operate normally. This also reproduces 100%
Assignee: nobody → aosmond
Blocks: 1007973
Status: NEW → ASSIGNED
Target Milestone: --- → 2.0 S2 (23may)
Attached patch bug1013425.patch (obsolete) — Splinter Review
Attachment #8425630 - Flags: review?(mhabicher)
Should this be nomed for 1.4?
(In reply to Jason Smith [:jsmith] from comment #2) > Should this be nomed for 1.4? Yes.
blocking-b2g: --- → 1.4?
blocking-b2g: 1.4? → 1.4+
Comment on attachment 8425630 [details] [diff] [review] bug1013425.patch Review of attachment 8425630 [details] [diff] [review]: ----------------------------------------------------------------- Ship it! ::: dom/camera/GonkCameraControl.cpp @@ +423,5 @@ > break; > + > + case CAMERA_PARAM_SCENEMODE: > + // Reset disabling normal pictures in HDR mode in conjunction with setting > + // scene mode because some drivers require they be changed together nit: period at the end please.
Attachment #8425630 - Flags: review?(mhabicher) → review+
Fix nits.
Attachment #8425630 - Attachment is obsolete: true
Attachment #8425706 - Flags: review+
Test 8 failure on emulator is unrelated, as are Windows 7 test 3 and Windows 8 bc1.
Keywords: checkin-needed
FWIW, this file is NPOTB for anything other than B2G, so try to avoid the needless builds/tests on other platforms in the future :) https://wiki.mozilla.org/Sheriffing/How:To:Recommended_Try_Practices
RyanVM: that link to b2g-inbound doesn't look at all correct. :)
Flags: needinfo?(ryanvm)
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Needs a branch patch rebased on top of b2g30_v1_4 for v1.4 uplift.
Flags: needinfo?(aosmond)
Flags: needinfo?(aosmond)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: