Bug 1013425 - Set extra HDR params when changing scene mode to ensure all driver accept; was causing preview freezes on flame after take picture. r=mikeh