dom/camera/GonkCameraControl.cpp
@@ -421,6 +421,12 @@ nsGonkCameraControl::Set(uint32_t aKey, const nsAString& aValue)
       // Explicit flash mode changes always win and stick.
       mAutoFlashModeOverridden = false;
       break;
+
+    case CAMERA_PARAM_SCENEMODE:
+      // Reset disabling normal pictures in HDR mode in conjunction with setting
+      // scene mode because some drivers require they be changed together.
+      mParams.Set(CAMERA_PARAM_SCENEMODE_HDR_RETURNNORMALPICTURE, false);
+      break;
   }
 
   return PushParameters();
